2008-10-27  Mike Krüger  <mkrueger@novell.com>

	* Gui/ResolveVisitor.cs: Removed duplicate method.

2008-10-27  Mike Krüger  <mkrueger@novell.com>

	* Gui/ResolveVisitor.cs:
	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 434705 - No autocomplete
	offered if not assigning result of 'new' to a variable'.

2008-10-27  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: fixed possible null reference
	exception.

2008-10-27  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs: Fixed 'Bug 438699 - Code completion shows
	too many options'.

2008-10-27  Mike Krüger  <mkrueger@novell.com>

	* Gui/NewOverrideCompletionData.cs: fixed setter generation in override
	completion.

2008-10-27  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: fixed "Bug 436870 - Inheriting from
	base class gives bad code completion (reopened)" 

2008-10-27  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryParameterDataProvider.cs: fixed 'Bug 432727 - No
	completion if no constructor'.

2008-10-27  Mike Krüger  <mkrueger@novell.com>

	* Gui/NewCSharpExpressionFinder.cs: fixed 'Bug 434705 - No autocomplete
	offered if not assigning result of 'new' to a variable'.

2008-10-27  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Gui/NRefactoryParameterDataProvider.cs: Removed debug messages.

2008-10-24  Mike Krüger  <mkrueger@novell.com>

	* Gui/NewOverrideCompletionData.cs: fixed override bug.

2008-10-24  Mike Krüger  <mkrueger@novell.com>

	* Gui/CSharpTextEditorCompletion.cs: fixed 'Bug 438708 - Changing
	namespace results in MD hanging'.

2008-10-24  Mike Krüger  <mkrueger@novell.com>

	* Gui/NRefactoryResolver.cs:
	* Gui/CSharpTextEditorCompletion.cs:
	* Gui/NRefactoryParameterDataProvider.cs: fixed
Bug 434706 -
	Autocomplete should expand on pressing comma
Bug 434717 - No
	completion for nullable types

	* Gui/CSharpAmbience.cs: Fixed a null reference exception.

2008-10-22  Mike Krüger  <mkrueger@novell.com>
